Fixing the .idea project, finalizing rename of project.

--- a/pom.xml
+++ b/pom.xml
@@ -4,11 +4,11 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>com.example</groupId>
-	<artifactId>MudFun</artifactId>
+	<artifactId>PokerGame</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
-	<name>MudFun</name>
+	<name>PokerGame</name>
 	<description>Demo project for Spring Boot</description>
 
 	<parent>
